test/scc/expr/semantic-errors/120.t
void test()
{
    int a = { 0, 1 };
}